--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration production --base-href https://maciejlisck.github.io/exam-preparation-app/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
