--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@ngxs/devtools-plugin": "19.0.0",
+    "@ngxs/form-plugin": "19.0.0",
+    "@ngxs/logger-plugin": "19.0.0",
+    "@ngxs/router-plugin": "19.0.0",
+    "@ngxs/storage-plugin": "19.0.0",
+    "@ngxs/store": "^19.0.0",
     "bootstrap": "^5.3.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
